@@ -1,3 +1,8 @@
+2011-04-11  Alan Modra  <amodra@gmail.com>
+
+	* config/tc-cr16.c (getprocreg_image): Correct range check.
+	(getprocregp_image): Likewise.
+
 2011-03-26  John Marino  <binutils@marino.st>
 
 	* configure.tgt: Fix support for *-*-dragonfly*.
